--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,4 +12,9 @@ body {
         transition ease-in-out duration-200 text-white
         active:text-blue-400
     }
+    .noteRed {
+        @apply absolute -right-2 top-1 bg-red-600 flex
+        rounded-full justify-center h-5 w-5 items-center 
+        opacity-75 animate-pulse text-white
+    }
 }
