--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,4 +17,9 @@ body {
         rounded-full justify-center h-5 w-5 items-center 
         opacity-75 animate-pulse text-white
     }
+    .userIcon {
+        @apply rounded-full cursor-pointer object-contain
+        hover:scale-110 transform duration-150 ease-in-out overflow-hidden
+        border-2 border-blue-400 w-14 h-14
+    }
 }
